# human-action-recognition

./: .gitignore  CMakeLists.txt  Project_Report.docx  README.md  SETUP_MACOS_VSCODE.md  SETUP_UBUNTU_VSCODE.md  dataset_check.sh  download_dataset.py  eval_report.csv  har  setup_linux.sh  setup_macos.sh
include/: action_classifier.hpp  dataset_loader.hpp  detector.hpp  evaluator.hpp  feature_extractor.hpp  types.hpp
src/: action_classifier.cpp  dataset_loader.cpp  detector.cpp  evaluator.cpp  feature_extractor.cpp  main.cpp
